<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >

    <string name="app_name">Chats</string>

    <string name="app_name_tool_bar">Chats</string>

    <string name="who_is_near">Who is near me</string>
    <string name="coming_soon">This page is under migration to new framework.\nPlease wait. New page will be better!</string>

    <string name="living_room">Living room</string>
    <string name="ask_priest_room">Ask priest room</string>
    <string name="bogoslov_room">Talk about God room</string>

    <string name="search">Поиск</string>
    <string name="treba_menu">Заказать требы</string>


    <string name="trebi_item_title">Заказать Требы</string>

    <string name="trebi_title_new">Создать</string>
    <string name="trebi_title_history">История</string>
    <string name="trebi_title_info">О требах</string>

    <string name="treba_type_view">Выберите записку</string>


    <string name="temp_wait">Пожалуйста, подождите</string>
    <string name="create_treba_error_type">Записка или треба не выбрана</string>
    <string name="create_treba_error_name">Имя не указано</string>

    <string name="treba_status_wait">Ожидайте.\nЗаписку скоро доставят %1$s</string>
    <string name="treba_status_taken">Записка доставлена %1$s</string>

    <string name="treba_info_text1">Сервис помогает передавать Ваши требы и записки в храм, когда у Вас нет возможности посетить службу самостоятельно.\nТреба будет выполнена в одном из храмов наших батюшек.</string>
    <string name="treba_info_text2">«О здравии» и «Об упокоении» - это молитвенное упоминание имен живых и умерших для вечного блага и спасения поминаемых.</string>
    <string name="treba_info_text3">Слово «Треба», которое в древнерусском языке имело сакральный смысл и означало: «жертва», «жертвоприношение», «молитва», «исполнение священного обряда». В настоящее время словом «треба» называются молитвословия и священнодействия, совершаемые по просьбе (по потребам, нуждам) одного или нескольких христиан в особых обстоятельствах их жизни.</string>
    <string name="treba_info_text5">Важно!</string>
    <string name="treba_info_text6">В записках пишутся имена только тех, кто был крещен в православной Церкви. Нельзя писать имена некрещеных, самоубийц, еретиков. Пожертвования от записок пойдут батюшкам на храм и на развитие приложения.</string>

    <string name="dialog_select_treba_price_title">Сколько вы хотите пожертвовать?</string>
    <string name="dialog_select_treba_price_message">Ваши пожертвования пойдут батюшке на храм и на развитие приложения.</string>
    <string name="treba_petr_i_fevr">Молебен о замужестве Петру и Фервории</string>


    <array name="treba_prices_o_zdravii">
        <item>100 руб</item>
        <item>200 руб</item>
        <item>500 руб. Спасибо!</item>
    </array>

    <array name="treba_skus_o_zdravii">
        <item>treba_1_o_zdravii_v2</item>3
        <item>treba_2_o_zdravii_v2</item>6
        <item>treba_3_o_zdravii_v2</item>15
    </array>


    <array name="treba_prices_moleben">
        <item>300 руб</item>5
        <item>500 руб</item>10
        <item>1000 руб. Спасибо!</item>
    </array>

    <array name="treba_skus_moleben">
        <item>treba_moleben1_v2</item>
        <item>treba_moleben2_v2</item>
        <item>treba_moleben3_v2</item>
    </array>


    <string name="treba_ozdravii">Записка о здравии</string>
    <string name="treba_ob_upokoenii">Записка об упокоении</string>
    <string name="treba_sorokoust_zdrav">Сорокоуст о здравии</string>
    <string name="treba_sorokoust_upok">Сорокоуст об упокоении</string>


    <string name="treba_alko">Молебен o страдающих алкоголизмом и наркоманией</string>
    <string name="treba_k_rodam">Молебен для готовящихся к родам</string>
    <string name="treba_pered_dobrim_delom">Перед началом всякого доброго дела</string>
    <string name="treba_blagodarstvenniy">Молебен благодарственный</string>
    <string name="treba_petru_i_fevronii">Молебен Петру и Февронии о супружеском счастье</string>
    <string name="create_treba_step2">Шаг 2. Укажите имена</string>
    <string name="create_treba_step1">Шаг 1. Выберите требу или записку</string>
    <string name="create_treba_step3">Шаг 3. Выберите храм</string>
    <string name="telegram_chats_connect_text">Подключите наш новый чат. Мы используем платформу от Telegram. Ваш номер телефона никому не будет виден, пока вы не добавите контакт в друзья.</string>
    <string name="fragment_telegram_connect_button">Подключить</string>

    <string name="fragment_chat_no_telegram">Этот пользователь еще не установил новый чат. Напишите ему, используя старый.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unexpected_error">Unexpected error. Please, try later.</string>
    <string name="choose_church">Choose church</string>

    <string name="near_user_header_distance">ДО %1$d КМ</string>

    <string name="who_near_menu">Кто рядом</string>

</resources>
