<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">



    <module.christian.ru.dating.widget.TabsWidget
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="Наши батюшки"
                android:textColor="@color/primary"
                android:textSize="18sp"
                tools:visibility="visible"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <LinearLayout
                    android:id="@+id/evgeniy_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <module.christian.ru.dating.widget.RoundedImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/evgen"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="иерей Евгений\nХрам святого Николая Чудотворца. Калужская область. "
                        android:textSize="12sp"/>
                </LinearLayout>

                <View
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:id="@+id/nilolay_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <module.christian.ru.dating.widget.RoundedImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nikolay"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="иерей Николай\nНикольский кафедральный собор. Ишим."
                        android:textSize="12sp"/>
                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/treba_info_text1"
                android:textColor="@color/primary"
                android:textSize="16sp"
                tools:visibility="visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/treba_info_text2"
                android:textColor="@color/textColorSecondary2"
                android:textSize="16sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/treba_info_text3"
                android:textColor="@color/textColorSecondary2"
                android:textSize="16sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="28sp"
                android:text="@string/treba_info_text5"
                android:textColor="@color/primary"
                android:textSize="16sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/treba_info_text6"
                android:textColor="@color/textColorSecondary2"
                android:textSize="16sp"
                />


        </LinearLayout>


    </ScrollView>


</LinearLayout>